# ooetl

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml  setup.cfg
examples/: governo2csv.py  sparql.py  sql2csv.py  sql2json.py
ooetl/: __init__.py  loaders.py  transformations.py
ooetl/docs/: Makefile  conf.py  index.rst  install.rst  intro.rst  tutorial.rst
ooetl/docs/_static/images/: classes_uml.graffle
ooetl/docs/src/: oo_etl.rst
ooetl/extractors/: __init__.py  sparql.py
ooetl/tests/: django.py  test_ooetl.py
tests/: test_oo_etl.py  test_ooetl.py
