[tool.poetry]
name = "ooetl"
version = "1.2.3"
description = "Minimal opinionated object oriented ETL framework"
authors = ["guglielmo <guglielmo@openpolis.it>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/openpolis/ooetl/"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.3.0"
requests = "^2.26.0"
SQLAlchemy = {version = "*"}
SPARQLWrapper = "^1.8.5"
elasticsearch = "^7.13.3"
mysqlclient = "^2.0.3"
psycopg2-binary = "^2.9.1"
lxml = "^4.6.3"
cssselect = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^6.5.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
html = ["lxml", "cssselect"]
elastic = ["elasticsearch"]
sparql = ["SPARQLWrapper"]
myssql = ["SQLAlchemy", "mysqlclient"]
postgresql = ["SQLAlchemy", "psycopg2-binary"]
all = ["lxml", "cssselect", "elasticsearch", "SPARQLWrapper", "SQLAlchemy", "mysqlclient", "psycopg2-binary"]